feat: mejorar calidad del backend, fetch gap-fill e integración Sonar